--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -6,6 +6,7 @@
       "name": "Assignment 3",
       "provenance": [],
       "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMeB1fWUeGYx1rkpmC5u+7r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +50,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1116,12 +1117,162 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N6HxTtsme-Mc"
+      },
+      "source": [
+        "# Custom Call back\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "PYZKXqzeeiPU"
       },
       "source": [
-        ""
+        "BEAM_SIZE = 1\n",
+        "def f(a,b):\n",
+        "    cnt = 0\n",
+        "    for i in range(min(len(b),len(a))):\n",
+        "        if(a[i] == b[i]):\n",
+        "          cnt += 1\n",
+        "    cnt /= len(b)\n",
+        "    return cnt\n",
+        "\n",
+        "class CustomCallback(keras.callbacks.Callback):\n",
+        "\n",
+        "    def on_epoch_end(self, epoch, logs=None):\n",
+        "        global BEAM_SIZE\n",
+        "        if(epoch%2 == 1):\n",
+        "          encoder_model,decoder_model = get_inference_model_attn(self.model)\n",
+        "          x = decode_sequence(val_encoder_input_data,BEAM_SIZE,encoder_model,decoder_model)\n",
+        "          word2word = (np.sum(np.array(x) == np.array(val_expected_texts))/len(x))\n",
+        "          charbychar = np.sum(np.array([f(a,b) for a,b in zip(x,val_expected_texts)]))/len(x)\n",
+        "          print(\"val_accuracy_word2word is: \",word2word)\n",
+        "          print(\"val_accuracy_char_by_char is: \", charbychar)\n",
+        "          wandb.log({'val_accuracy_word2word':word2word})\n",
+        "          wandb.log({'val_accuracy_charbychar':charbychar})"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_CJMFEV5fBQK"
+      },
+      "source": [
+        "# Training Code"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4iDo97U3e_v0"
+      },
+      "source": [
+        "def train():\n",
+        "    config_default = { \n",
+        "        'embedding_size' : 256,\n",
+        "        'num_encoder_layers': 1,\n",
+        "        'num_decoder_layers': 1,\n",
+        "        'hidden_layer_size': 256,\n",
+        "        'cell_type': 'LSTM',\n",
+        "        'drop_out': 0.25,\n",
+        "        'beam_size': 5,\n",
+        "        'attention': True,\n",
+        "        'epochs': 6\n",
+        "    }\n",
+        "    print(\"wand about to be initialised\")\n",
+        "    wandb.init(config=config_default,project='Assignment3')\n",
+        "    config = wandb.config\n",
+        "    model = model_with_attention(num_encoder_tokens,num_decoder_tokens,config.embedding_size,\n",
+        "                       config.hidden_layer_size,\n",
+        "                       config.cell_type,config.drop_out)\n",
+        "    global BEAM_SIZE\n",
+        "    BEAM_SIZE = config.beam_size\n",
+        "\n",
+        "    model.compile(\n",
+        "      optimizer=\"rmsprop\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"]\n",
+        "    )\n",
+        "    model.fit(\n",
+        "      [encoder_input_data, decoder_input_data],\n",
+        "      decoder_target_data,\n",
+        "      batch_size=64,\n",
+        "      epochs=config.epochs,\n",
+        "      callbacks=[CustomCallback(),WandbCallback()]\n",
+        "    )"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "abMwDeFNfEGp"
+      },
+      "source": [
+        "#sweep configuration\n",
+        "sweep_config = {\n",
+        "    'name': 'Recurrent_Neural_Networks',\n",
+        "    'method' : 'bayes',\n",
+        "    'metric': {        \n",
+        "         'goal': 'maximize',\n",
+        "         'name' : 'val_accuracy_word2word'\n",
+        "    },\n",
+        "    'parameters': {\n",
+        "        'embedding_size' : {\n",
+        "            'values': [64, 256,512]\n",
+        "        },\n",
+        "        'num_encoder_layers': {\n",
+        "            'values': [1]\n",
+        "        },\n",
+        "        'num_decoder_layers': {\n",
+        "            'values': [1]\n",
+        "        },\n",
+        "        'hidden_layer_size': {\n",
+        "            'values': [64, 256,512]\n",
+        "        },\n",
+        "        'cell_type': {\n",
+        "            'values': [ 'RNN', 'GRU', 'LSTM']\n",
+        "        },\n",
+        "        'drop_out': {\n",
+        "            'values' : [0.2,0.25,0.3]\n",
+        "        },\n",
+        "        'beam_size': {\n",
+        "            'values': [5]\n",
+        "        },\n",
+        "        'attention': {\n",
+        "            'values': [True]\n",
+        "        },\n",
+        "        'epochs':{\n",
+        "            'values': [6]\n",
+        "        }\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r82oB38nfEq5"
+      },
+      "source": [
+        "#sweep_id =  wandb.sweep(sweep_config,entity=\"shivaram_22\",project=\"Assignment3\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gPATKp1efGEQ"
+      },
+      "source": [
+        "#wandb.agent(sweep_id,project=\"Assignment3\",function=train)"
       ],
       "execution_count": null,
       "outputs": []
