--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -6,7 +6,6 @@
       "name": "Assignment 3",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeB1fWUeGYx1rkpmC5u+7r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +49,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1273,6 +1272,214 @@
       },
       "source": [
         "#wandb.agent(sweep_id,project=\"Assignment3\",function=train)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wswhiVPIfYnL"
+      },
+      "source": [
+        "# Beamsearch outputting attention weights"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GGmUNhILfZh3"
+      },
+      "source": [
+        "def fn(sequence):\n",
+        "    decoded_sentence = \"\"\n",
+        "    attention = []\n",
+        "    for (i,attn) in sequence:\n",
+        "      sampled_char = reverse_target_char_index[i]\n",
+        "      attention.append(attn)\n",
+        "      if sampled_char == '\\n':\n",
+        "         break\n",
+        "      decoded_sentence += sampled_char\n",
+        "\n",
+        "    return (decoded_sentence,attention)\n",
+        "\n",
+        "\n",
+        "def decode_sequence(input_seq,beam_size,encoder_model,decoder_model):\n",
+        "    \n",
+        "    num_samples = input_seq.shape[0]\n",
+        "    #print(input_seq.shape)\n",
+        "    # Encode the input as state vectors.\n",
+        "    encoder_out,*states_value = encoder_model.predict(input_seq)   \n",
+        "\n",
+        "    target_seq = np.zeros((num_samples,1))\n",
+        "    # # Populate the first character of target sequence with the start character.\n",
+        "    target_seq[:,0] = target_token_index[\"\\t\"]\n",
+        "\n",
+        "    num_decoder_layers = 0\n",
+        "\n",
+        "    for layer in decoder_model.layers:\n",
+        "        if layer.name.startswith('decoder_') :\n",
+        "           num_decoder_layers += 1\n",
+        "    \n",
+        "    #Shape (None,list(list))\n",
+        "    sequence_list = [[list()] for i in range(num_samples)]\n",
+        "    \n",
+        "    #shape (None,curr_beamsize)\n",
+        "    sequence_score = np.empty(shape=(num_samples,1),dtype=object)\n",
+        "    sequence_score.fill(0.0)\n",
+        "    \n",
+        "    if(type(states_value) != list):\n",
+        "      states_value = [states_value]\n",
+        "    \n",
+        "    sequence_state = [states_value*num_decoder_layers]\n",
+        "\n",
+        "    \n",
+        "    num_states = len(sequence_state[0])\n",
+        "    #print(\"num_states\",num_states)\n",
+        "   \n",
+        "    #intially curr_beam size 1 after 1st prediction we set it back to beam_size\n",
+        "    k = 1\n",
+        "\n",
+        "    for ii in range(max_decoder_seq_length):\n",
+        "        \n",
+        "        # shape (None,list)\n",
+        "        all_candidates = [ [] for i in range(num_samples) ]\n",
+        "\n",
+        "        for x in range(k):\n",
+        "            \n",
+        "            #seq is (None,curr_seq)  curr_seq means list found till now\n",
+        "            seq = [sequence_list[i][x] for i in range(num_samples)]\n",
+        "\n",
+        "            #score is (None,1) it is score of all samples xth sequence\n",
+        "            score = sequence_score[:,x]\n",
+        "\n",
+        "            #curr_state is the state_corresponding to xth sequence for all samples \n",
+        "            curr_state = sequence_state[x]\n",
+        "\n",
+        "            if(ii>0):\n",
+        "                 #filling the target_seq with previous elements of this xth sequence for all samples \n",
+        "                 target_seq = np.array([seq[i][ii-1][0] for i in range(num_samples)])\n",
+        "                 target_seq = target_seq.reshape((num_samples,1))\n",
+        "            \n",
+        "            #calling the predict function and storing the output_tokens and states\n",
+        "            output_tokens,states,attn_weights= decoder_model.predict([target_seq] + curr_state+[encoder_out])\n",
+        "            #print(attn_weights.shape)\n",
+        "\n",
+        "            #for all samples updating the corresponding all_candidate list\n",
+        "            for i in range(num_samples):\n",
+        "              #all_candidates[i] is list of [seq_list,score,states] , at the end we sort this all_candidates list based on score\n",
+        "              all_candidates[i] += [[seq[i]+[(j,attn_weights[i])],score[i]- np.math.log(output_tokens[i,0,j]),[states[ii][i] for ii in range(num_states)]] for j in range(output_tokens.shape[2])]\n",
+        "\n",
+        "        #setting k to beam size    \n",
+        "        k = beam_size\n",
+        "\n",
+        "        for i in range(num_samples):    \n",
+        "           #sorting the all_candidates[i] list based on score\n",
+        "           all_candidates[i] = sorted(all_candidates[i],key=lambda tup:tup[1])[:k]\n",
+        "        \n",
+        "        # Now remake sequence_list,sequence_score and sequence_state\n",
+        "        sequence_list = [[all_candidates[i][j][0] for j in range(k)] for i in range(num_samples)]\n",
+        "        sequence_score = np.array([[all_candidates[i][j][1] for j in range(k)] for i in range(num_samples)])\n",
+        "        sequence_state = [ [ np.array([all_candidates[j][i][2][kk] for j in range(num_samples)]) for kk in range(num_states)] for i in range(k)]\n",
+        "\n",
+        "    final_sequence = [sequence_list[i][0] for i in range(num_samples)]\n",
+        "    decoded_sentence = [fn(final_sequence[i]) for i in range(num_samples)]\n",
+        "    \n",
+        "    return decoded_sentence"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eenQ3v_gfb9l"
+      },
+      "source": [
+        "# Training the model with found best hyper parameters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "afagvkDnfaA0"
+      },
+      "source": [
+        "# The Best Hyperparmeters found are \n",
+        "# Attention = true\n",
+        "# Beam size = 5\n",
+        "# cell type = 'LSTM'\n",
+        "# dropout = 0.25\n",
+        "# hidden_layer_size = 512\n",
+        "# epochs = 6\n",
+        "# embedding_size = 512\n",
+        "# num_encoder_layers = 1\n",
+        "# num_decoder_layers = 1\n",
+        "\n",
+        "model =  model_with_attention(num_encoder_tokens,num_decoder_tokens,512,512,'LSTM',0.25)\n",
+        "\n",
+        "model.compile(\n",
+        "    optimizer=\"rmsprop\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"]\n",
+        ")\n",
+        "model.fit(\n",
+        "    [encoder_input_data, decoder_input_data],\n",
+        "    decoder_target_data,\n",
+        "    batch_size=64,\n",
+        "    epochs=6\n",
+        ")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2LD_46dOff2a"
+      },
+      "source": [
+        "# helper function used for calculating charbyaccuracy\n",
+        "def f(a,b):\n",
+        "    cnt = 0\n",
+        "    for i in range(min(len(b),len(a))):\n",
+        "        if(a[i] == b[i]):\n",
+        "          cnt += 1\n",
+        "    cnt /= len(b)\n",
+        "    return cnt\n",
+        "encoder_model,decoder_model = get_inference_model_attn(model)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fAsJVcY5fi2V"
+      },
+      "source": [
+        "x = decode_sequence(val_encoder_input_data,5,encoder_model,decoder_model)\n",
+        "attn = [val[1] for val in x]\n",
+        "x = [val[0] for val in x]\n",
+        "word2word = (np.sum(np.array(x) == np.array(val_expected_texts))/len(x))\n",
+        "charbychar = np.sum(np.array([f(a,b) for a,b in zip(x,val_expected_texts)]))/len(x)\n",
+        "print(\"val_accuracy_word2word is: \",word2word)\n",
+        "print(\"val_accuracy_char_by_char is: \", charbychar)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VvS19mgBfjuq"
+      },
+      "source": [
+        "x = decode_sequence(test_encoder_input_data,5,encoder_model,decoder_model)\n",
+        "attn = [val[1] for val in x]\n",
+        "x = [val[0] for val in x]\n",
+        "word2word = (np.sum(np.array(x) == np.array(test_expected_texts))/len(x))\n",
+        "charbychar = np.sum(np.array([f(a,b) for a,b in zip(x,test_expected_texts)]))/len(x)\n",
+        "print(\"test_accuracy_word2word is: \",word2word)\n",
+        "print(\"test_accuracy_char_by_char is: \", charbychar)"
       ],
       "execution_count": null,
       "outputs": []
