Predictions and attention heatmap

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -6,6 +6,7 @@
       "name": "Assignment 3",
       "provenance": [],
       "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM83pBZK13Ki+I7WvfJHE7i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +50,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1480,6 +1481,113 @@
         "charbychar = np.sum(np.array([f(a,b) for a,b in zip(x,test_expected_texts)]))/len(x)\n",
         "print(\"test_accuracy_word2word is: \",word2word)\n",
         "print(\"test_accuracy_char_by_char is: \", charbychar)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mrg9vSHEgDbu"
+      },
+      "source": [
+        "attention_df = pd.DataFrame()\n",
+        "attention_df['input_texts'] = test_input_texts\n",
+        "attention_df['predictions'] = x\n",
+        "attention_df['actual'] = test_expected_texts\n",
+        "attention_df.to_csv(\"/content/drive/MyDrive/Assignment3/attention_Predictions.tsv\", sep=\"\\t\")\n",
+        "attention_df['attention_weights'] = attn"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HoUtVqkogEE1"
+      },
+      "source": [
+        "temp = pd.DataFrame()\n",
+        "temp['input_texts'] = attention_df['input_texts']\n",
+        "temp['vanilla_pred'] = vanilla_df['predictions']\n",
+        "temp['attention_pred'] = attention_df['predictions'] \n",
+        "temp['actual'] = attention_df['actual']\n",
+        "\n",
+        "temp = temp.loc[(temp['vanilla_pred'] != temp['actual'])]\n",
+        "temp = temp.loc[(temp['attention_pred'] == temp['actual'])]\n",
+        "temp.head(10)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZYjIPRAfgF0r"
+      },
+      "source": [
+        "attention_random_sample = attention_df.sample(n = 9,replace=False)\n",
+        "attention_random_sample.head(9)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n4m155NhgHPD"
+      },
+      "source": [
+        "#The following git file is required to run the program\n",
+        "#The zip file is available in the github repo \n",
+        "#It is used to display Devanagiri scripts in seaborn heatmap label(for attention heatmap)\n",
+        "\n",
+        "!unzip \"utf.zip\"\n",
+        "import matplotlib.font_manager as fm\n",
+        "fontprop = fm.FontProperties(fname='Devanagari/Lohit-Devanagari.ttf')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GFWKmfb5g5Wm"
+      },
+      "source": [
+        "#Generate heatmap for confusion matrix\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "from __future__ import unicode_literals\n",
+        "import seaborn as sns\n",
+        "import matplotlib.ticker as ticker\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib\n",
+        "\n",
+        "\n",
+        "f, g = plt.subplots(3,3,figsize=(20,10))\n",
+        "i = 0\n",
+        "for index, row in attention_random_sample.iterrows():\n",
+        "  \n",
+        "  sample_attention = np.array(row['attention_weights'])\n",
+        "  sample_attention = sample_attention.reshape((sample_attention.shape[0],sample_attention.shape[2]))\n",
+        "  decode = [ii for ii in row['predictions']]+['#']\n",
+        "  encode = [ii for ii in row['input_texts']]+['#']\n",
+        "  \n",
+        "  ax = sns.heatmap(sample_attention,linecolor= 'white', cbar=True,cmap=\"YlGnBu\",yticklabels=decode,ax = g[i//3][i%3])\n",
+        "  ax.set_xticklabels(encode, fontsize=10, rotation=0)\n",
+        "  ax.set_yticklabels(decode,fontsize =10,rotation=0,fontproperties = fontprop)\n",
+        "  ax.tick_params(axis='y', labelsize=20)\n",
+        "  ax.tick_params(axis='x', labelsize=20)\n",
+        "  #plt.yticks(fontproperties = fontprop,fontsize =20)\n",
+        "  ax.set_xlabel('Input Word',fontsize=1)\n",
+        "  ax.set_ylabel('Decoded Word',fontsize = 1)\n",
+        "  ax.set_title('Visualising Attention Weights',fontsize = 20)\n",
+        "  \n",
+        "  i +=1\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.savefig('heatmap_grid.png') "
       ],
       "execution_count": null,
       "outputs": []
