Added code for Visualisation

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -6,7 +6,6 @@
       "name": "Assignment 3",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM83pBZK13Ki+I7WvfJHE7i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +49,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1588,6 +1587,147 @@
         "\n",
         "plt.tight_layout()\n",
         "plt.savefig('heatmap_grid.png') "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n9JsS2f8hh0N"
+      },
+      "source": [
+        "# Visualisation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YJZ03XBShiyE"
+      },
+      "source": [
+        "# get html element\n",
+        "from IPython.display import HTML as html_print\n",
+        "from IPython.display import display\n",
+        "import keras.backend as K\n",
+        "\n",
+        "def cstr(s, color='black'):\n",
+        "\tif s == ' ':\n",
+        "\t\treturn \"<text style=color:#000;padding-left:10px;background-color:{}> </text>\".format(color, s)\n",
+        "\telse:\n",
+        "\t\treturn \"<text style=color:#000;background-color:{}>{} </text>\".format(color, s)\n",
+        "\t\n",
+        "# print html\n",
+        "def print_color(t):\n",
+        "\tdisplay(html_print(''.join([cstr(ti, color=ci) for ti,ci in t])))\n",
+        "\n",
+        "# get appropriate color for value\n",
+        "def get_clr(value):\n",
+        "\tcolors = ['#85c2e1', '#89c4e2', '#95cae5', '#99cce6', '#a1d0e8'\n",
+        "\t\t'#b2d9ec', '#baddee', '#c2e1f0', '#eff7fb', '#f9e8e8',\n",
+        "\t\t'#f9e8e8', '#f9d4d4', '#f9bdbd', '#f8a8a8', '#f68f8f',\n",
+        "\t\t'#f47676', '#f45f5f', '#f34343', '#f33b3b', '#f42e2e']\n",
+        "\tvalue = int((value * 100) / 5)\n",
+        "\treturn colors[value]\n",
+        "\n",
+        "# sigmoid function\n",
+        "def sigmoid(x):\n",
+        "\tz = 1/(1 + np.exp(-x)) \n",
+        "\treturn z\n",
+        "\n",
+        "def visualize(attention_weights,input,output_index,decoded_sentence):\n",
+        "  text_colours = []\n",
+        "  for i in range(len(input)):\n",
+        "    text = (input[i], get_clr(attention_weights[output_index][i]))\n",
+        "    text_colours.append(text)\n",
+        "  print_color(text_colours)\n",
+        "  text_colours = []\n",
+        "  for i in range(len(decoded_sentence)):\n",
+        "    if(i == output_index):\n",
+        "          text = (decoded_sentence[i], get_clr(sigmoid(1)))\n",
+        "    else :\n",
+        "          text = (decoded_sentence[i], get_clr(sigmoid(0)))\n",
+        "    text_colours.append(text)\n",
+        "    print_color(text_colours)\n",
+        "    text_colours = []\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ij2714tNhjxV"
+      },
+      "source": [
+        "from IPython.display import clear_output\n",
+        "import time\n",
+        "\n",
+        "def visualize_attn(attention_weights,input_text,prediction_text):\n",
+        "    \n",
+        "    sample_attention = np.array(attention_weights)\n",
+        "    sample_attention = sample_attention.reshape((sample_attention.shape[0],sample_attention.shape[2]))\n",
+        "    alpha = sigmoid(sample_attention)\n",
+        "\n",
+        "    for i in range(len(prediction_text)):\n",
+        "        clear_output(wait=True)\n",
+        "        visualize(alpha,input_text,i,prediction_text)\n",
+        "        time.sleep(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Mvy3GgB8hlsT"
+      },
+      "source": [
+        "## Visualisation on 9 samples from test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b2s-v4onhnGr"
+      },
+      "source": [
+        "for indx,row in attention_random_sample.iterrows():\n",
+        "  visualize_attn(row['attention_weights'],row['input_texts'],row['predictions'])\n",
+        "  time.sleep(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qy6EP9JihoK6"
+      },
+      "source": [
+        "# Let's try visualisation on random samples that we took from test data step by step if u feel for loop is too fast\n",
+        "x = attention_random_sample.iterrows()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AsiPm34EhrHC"
+      },
+      "source": [
+        "## Execute the below cell 9 times to get visualisation of 9 random samples chosen"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A5mGuohwhpwF"
+      },
+      "source": [
+        "indx,row = next(x)\n",
+        "visualize_attn(row['attention_weights'],row['input_texts'],row['predictions'])"
       ],
       "execution_count": null,
       "outputs": []
